== Change log

All notable changes to this project will be documented in this file.

The format is based on http://keepachangelog.com/[Keep a Changelog]
and this project adheres to http://semver.org/[Semantic Versioning].

=== [X.X] UNRELEASED

=== [3.2.14] 2019-06-01
==== Changed
* Bumped [mio-serial](https://gitlab.com/berkowski/mio-serial) to 3.2.14 (tracking mio version 0.14)

==== changed
* Merged [#17](https://github.com/berkowski/tokio-serial/pull/17) @nanpuyue updated the printline example.

=== [3.2] 2019-01-12
==== Changed
* Bumped [serialport-rs](https://gitlab.com/susurrus/serialport-rs) to 3.2

=== [3.1.1] 2019-01-12
==== Changed
* Merged [#16](https://github.com/berkowski/tokio-serial/pull/16) @yuja fixed feature flags

=== [3.1.0] - 2018-11-10
==== changed
* Bumped `mio-serial` dependency to 3.1

=== [3.0.0] - 2018-10-06
==== changed
* Bumped `mio-serial` dependency to 3.0

=== [0.8.0] - 2018-04-27
==== changed
* Migrated to tokio 0.1 with https://github.com/berkowski/tokio-serial/pull/9[#9] and
  https://github.com/berkowski/tokio-serial/pull/10[#10] Thanks, https://github.com/lnicola[lnicola]!
* Bumped `mio-serial` dependency to 0.8

=== [0.7.0] - UNRELEASED
==== added
* Windows support (through mio-serial 0.7)
* Appveyor testing support

==== changed
* Bumped `mio-serial` dependency to 0.7


=== [0.6.0] - 2017-11-28
==== added
* Re-exporting `mio_serial::Error` (itself a re-export of `serialport::Error`)

==== changed
* Bumped `mio-serial` dependency to 0.6

=== [0.5.0] - 2017-05-18
==== added
* Added `trust` CI
* https://github.com/berkowski/tokio-serial/pull/1[#1] provided `AsyncRead` and
  `AsyncWrite` impls.  Thanks https://github.com/lexxvir[lexxvir]!

==== changed
* Bumped `mio-serial` dependency to 0.5  Future releases will
  track `mio-serial` versions.