@@ -6,27 +6,22 @@
 //!
 #![deny(missing_docs)]
 
-extern crate bytes;
-extern crate futures;
-extern crate tokio_io;
-extern crate tokio_reactor;
-
-extern crate mio_serial;
-
 // Re-export serialport types and traits from mio_serial
 pub use mio_serial::{
-    DataBits, Error, ErrorKind, FlowControl, Parity, SerialPort, SerialPortSettings, StopBits, ClearBuffer,
+    ClearBuffer, DataBits, Error, ErrorKind, FlowControl, Parity, SerialPort, SerialPortSettings,
+    StopBits,
 };
 
 /// A type for results generated by interacting with serial ports.
 pub type Result<T> = mio_serial::Result<T>;
 
-use futures::{Async, Poll};
 use tokio_io::{AsyncRead, AsyncWrite};
 use tokio_reactor::{Handle, PollEvented};
 
 use std::io::{self, Read, Write};
 use std::path::Path;
+use std::pin::Pin;
+use std::task::{Context, Poll};
 use std::time::Duration;
 
 /// Serial port I/O struct.
@@ -71,7 +66,7 @@ impl Serial {
     /// tty is closed will return errors.
     ///
     #[cfg(unix)]
-    pub fn pair() -> ::Result<(Self, Self)> {
+    pub fn pair() -> Result<(Self, Self)> {
         let (master, slave) = mio_serial::Serial::pair()?;
 
         let master = Serial {
@@ -93,7 +88,7 @@ impl Serial {
     /// tty is closed will return errors.
     ///
     #[cfg(unix)]
-    pub fn pair_with_handle(handle: &Handle) -> ::Result<(Self, Self)> {
+    pub fn pair_with_handle(handle: &Handle) -> Result<(Self, Self)> {
         let (master, slave) = mio_serial::Serial::pair()?;
 
         let master = Serial {
@@ -116,7 +111,7 @@ impl Serial {
     ///
     /// * `Io` for any error while setting exclusivity for the port.
     #[cfg(unix)]
-    pub fn set_exclusive(&mut self, exclusive: bool) -> ::Result<()> {
+    pub fn set_exclusive(&mut self, exclusive: bool) -> Result<()> {
         self.io.get_mut().set_exclusive(exclusive)
     }
 
@@ -130,8 +125,8 @@ impl Serial {
     }
 }
 
-impl ::SerialPort for Serial {
-    fn settings(&self) -> ::SerialPortSettings {
+impl SerialPort for Serial {
+    fn settings(&self) -> SerialPortSettings {
         self.io.get_ref().settings()
     }
 
@@ -139,23 +134,23 @@ impl ::SerialPort for Serial {
         self.io.get_ref().name()
     }
 
-    fn baud_rate(&self) -> ::Result<u32> {
+    fn baud_rate(&self) -> Result<u32> {
         self.io.get_ref().baud_rate()
     }
 
-    fn data_bits(&self) -> ::Result<::DataBits> {
+    fn data_bits(&self) -> Result<DataBits> {
         self.io.get_ref().data_bits()
     }
 
-    fn flow_control(&self) -> ::Result<::FlowControl> {
+    fn flow_control(&self) -> Result<FlowControl> {
         self.io.get_ref().flow_control()
     }
 
-    fn parity(&self) -> ::Result<::Parity> {
+    fn parity(&self) -> Result<Parity> {
         self.io.get_ref().parity()
     }
 
-    fn stop_bits(&self) -> ::Result<::StopBits> {
+    fn stop_bits(&self) -> Result<StopBits> {
         self.io.get_ref().stop_bits()
     }
 
@@ -163,88 +158,88 @@ impl ::SerialPort for Serial {
         Duration::from_secs(0)
     }
 
-    fn set_all(&mut self, settings: &::SerialPortSettings) -> ::Result<()> {
+    fn set_all(&mut self, settings: &SerialPortSettings) -> Result<()> {
         self.io.get_mut().set_all(settings)
     }
 
-    fn set_baud_rate(&mut self, baud_rate: u32) -> ::Result<()> {
+    fn set_baud_rate(&mut self, baud_rate: u32) -> Result<()> {
         self.io.get_mut().set_baud_rate(baud_rate)
     }
 
-    fn set_data_bits(&mut self, data_bits: ::DataBits) -> ::Result<()> {
+    fn set_data_bits(&mut self, data_bits: DataBits) -> Result<()> {
         self.io.get_mut().set_data_bits(data_bits)
     }
 
-    fn set_flow_control(&mut self, flow_control: ::FlowControl) -> ::Result<()> {
+    fn set_flow_control(&mut self, flow_control: FlowControl) -> Result<()> {
         self.io.get_mut().set_flow_control(flow_control)
     }
 
-    fn set_parity(&mut self, parity: ::Parity) -> ::Result<()> {
+    fn set_parity(&mut self, parity: Parity) -> Result<()> {
         self.io.get_mut().set_parity(parity)
     }
 
-    fn set_stop_bits(&mut self, stop_bits: ::StopBits) -> ::Result<()> {
+    fn set_stop_bits(&mut self, stop_bits: StopBits) -> Result<()> {
         self.io.get_mut().set_stop_bits(stop_bits)
     }
 
-    fn set_timeout(&mut self, _: Duration) -> ::Result<()> {
+    fn set_timeout(&mut self, _: Duration) -> Result<()> {
         Ok(())
     }
 
-    fn write_request_to_send(&mut self, level: bool) -> ::Result<()> {
+    fn write_request_to_send(&mut self, level: bool) -> Result<()> {
         self.io.get_mut().write_request_to_send(level)
     }
 
-    fn write_data_terminal_ready(&mut self, level: bool) -> ::Result<()> {
+    fn write_data_terminal_ready(&mut self, level: bool) -> Result<()> {
         self.io.get_mut().write_data_terminal_ready(level)
     }
 
-    fn read_clear_to_send(&mut self) -> ::Result<bool> {
+    fn read_clear_to_send(&mut self) -> Result<bool> {
         self.io.get_mut().read_clear_to_send()
     }
 
-    fn read_data_set_ready(&mut self) -> ::Result<bool> {
+    fn read_data_set_ready(&mut self) -> Result<bool> {
         self.io.get_mut().read_data_set_ready()
     }
 
-    fn read_ring_indicator(&mut self) -> ::Result<bool> {
+    fn read_ring_indicator(&mut self) -> Result<bool> {
         self.io.get_mut().read_ring_indicator()
     }
 
-    fn read_carrier_detect(&mut self) -> ::Result<bool> {
+    fn read_carrier_detect(&mut self) -> Result<bool> {
         self.io.get_mut().read_carrier_detect()
     }
 
-    fn bytes_to_read(&self) -> ::Result<u32> {
+    fn bytes_to_read(&self) -> Result<u32> {
         self.io.get_ref().bytes_to_read()
     }
 
-    fn bytes_to_write(&self) -> ::Result<u32> {
+    fn bytes_to_write(&self) -> Result<u32> {
         self.io.get_ref().bytes_to_write()
     }
 
-    fn clear(&self, buffer_to_clear: ClearBuffer) -> ::Result<()> {
+    fn clear(&self, buffer_to_clear: ClearBuffer) -> Result<()> {
         self.io.get_ref().clear(buffer_to_clear)
     }
 
-    fn try_clone(&self) -> ::Result<Box<::SerialPort>> {
+    fn try_clone(&self) -> Result<Box<dyn SerialPort>> {
         self.io.get_ref().try_clone()
     }
 }
 
 impl Read for Serial {
     fn read(&mut self, buf: &mut [u8]) -> io::Result<usize> {
-        self.io.read(buf)
+        self.io.get_mut().read(buf)
     }
 }
 
 impl Write for Serial {
     fn write(&mut self, buf: &[u8]) -> io::Result<usize> {
-        self.io.write(buf)
+        self.io.get_mut().write(buf)
     }
 
     fn flush(&mut self) -> io::Result<()> {
-        self.io.flush()
+        self.io.get_mut().flush()
     }
 }
 
@@ -258,17 +253,25 @@ impl AsRawFd for Serial {
 }
 
 impl AsyncRead for Serial {
-    fn poll_read(&mut self, buf: &mut [u8]) -> io::Result<Async<usize>> {
-        self.io.poll_read(buf)
+    fn poll_read(
+        self: Pin<&mut Self>,
+        cx: &mut Context,
+        buf: &mut [u8],
+    ) -> Poll<io::Result<usize>> {
+        Pin::new(&mut self.get_mut().io).poll_read(cx, buf)
     }
 }
 
 impl AsyncWrite for Serial {
-    fn poll_write(&mut self, buf: &[u8]) -> io::Result<Async<usize>> {
-        self.io.poll_write(buf)
+    fn poll_write(self: Pin<&mut Self>, cx: &mut Context, buf: &[u8]) -> Poll<io::Result<usize>> {
+        Pin::new(&mut self.get_mut().io).poll_write(cx, buf)
     }
 
-    fn shutdown(&mut self) -> Poll<(), io::Error> {
-        self.io.shutdown()
+    fn poll_flush(self: Pin<&mut Self>, cx: &mut Context) -> Poll<io::Result<()>> {
+        Pin::new(&mut self.get_mut().io).poll_flush(cx)
+    }
+
+    fn poll_shutdown(self: Pin<&mut Self>, cx: &mut Context) -> Poll<io::Result<()>> {
+        Pin::new(&mut self.get_mut().io).poll_shutdown(cx)
     }
 }
